frontend/test/should_fail/ret_012.grg

rule r {
	x: Node;

	modify {
		return(x);
	}
}
